--- a/Scoring_MGDP/Views/ScoringConfigFrentes/Edit.cshtml
+++ b/Scoring_MGDP/Views/ScoringConfigFrentes/Edit.cshtml
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.Ambito, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Ambito, new { htmlAttributes = new { @class = "form-control" } })
@@ -42,7 +42,7 @@
                     @Html.EditorFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <div class="col-md-offset-10 col-md-5">
