--- a/Scoring_MGDP/Views/ContratoProv/Index.cshtml
+++ b/Scoring_MGDP/Views/ContratoProv/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PagedList.IPagedList<Scoring_MGDP.ViewModel.ContratoProvViewModel>
+
 @*@model PagedList.IPagedList < Scoring_MGDPData.ContratoProv>*@
 @using PagedList.Mvc;
 
@@ -16,6 +17,23 @@
     <p>
         @Html.ActionLink("Nuevo Contrato", "Create","ContratoProv", null, new { @class = "modal-link btn btn-primary" })
     </p>
+
+    @using (Html.BeginForm("Index", "ContratoProv", FormMethod.Get, new { @class = "form-inline" }))
+    {
+
+
+        <div class="visible-md visible-lg col-md-12">
+            <div class="input-group col-md-6">
+                @Html.DropDownList("search", ViewBag.ProveedoresList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                <span class="input-group-btn">
+                    <button class="btn btn-secondary btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </span>
+            </div>
+        </div>
+        <br />
+        <br />
+    }
+
     <div class="visible-md visible-lg col-md-12">
         <table class="table table-striped table-sm">
             <tr class="active text-center">
