--- a/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
@@ -21,7 +21,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
                 </div>
             </div>
