--- a/Scoring_MGDP/Views/MedicionesMetricas/Edit.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Edit.cshtml
@@ -11,11 +11,12 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.IdMedicionMetrica)
+            @Html.HiddenFor(model => model.IdDefMetrica)
             
             <div class="form-group">
                 @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                     @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
                 </div>
             </div>
