--- a/Scoring_MGDP/Views/Metricas/Create.cshtml
+++ b/Scoring_MGDP/Views/Metricas/Create.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.TiposMetricasViewModel, "Tipo", htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.DropDownListFor(m => m.IdMetrica, Model.TipoMetricaList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
+                    @Html.DropDownListFor(m => m.IdTipo, Model.TipoMetricaList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                     @Html.ValidationMessageFor(model => model.TiposMetricasViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
